@@ -12,6 +12,7 @@ Change log for hexer, the multi-view binary editor
 	- clarify a README comment about the unpacked subdirectory
 	- drop the HAVE_NCURSES configuration setting, the support for
 	  changing the foreground and background color is autodeteted
+	- drop the bundled termlib implementation, require termcap support
 
 0.2.3	2015/12/10
 	- build with large file support on Linux
